# reddog_ROS2Control

./: .gitignore
hardware_manager/: CMakeLists.txt
hardware_manager/config/: config.yaml
hardware_manager/include/: Tangair_usb2can_motor_imu.h  callback_handler.h  config_loader.h
hardware_manager/src/: callback_handler.cpp  can_node_motor_imu.cpp  example_mti_reddog.cpp  usb2can_motor_imu.cpp
ros2_control/install/: local_setup.sh  setup.sh
ros2_control/install/hardware_dds_bridge/lib/hardware_dds_bridge/: hardware_manager
ros2_control/install/hardware_dds_bridge/share/hardware_dds_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_control/install/hardware_unitree_mujoco/share/hardware_unitree_mujoco/: package.sh
ros2_control/install/joystick/lib/joystick/: joy_controller
ros2_control/install/joystick/share/joystick/: package.bash  package.ps1  package.sh  package.zsh
ros2_control/install/reddog_description/share/reddog_description/: local_setup.sh  package.sh
ros2_control/install/reddog_hardware/lib/reddog_hardware/: motor_manager
ros2_control/install/reddog_hardware/share/reddog_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_control/install/rl_quadruped_controller/share/ament_index/resource_index/package_run_dependencies/: rl_quadruped_controller
ros2_control/install/rl_quadruped_controller/share/rl_quadruped_controller/: local_setup.sh  package.sh
ros2_control/install/xsens_mti_ros2_driver/share/xsens_mti_ros2_driver/: local_setup.sh  package.sh
ros2_control/log/: latest_build
ros2_control/src/reddog_ROS2Control/: README.md
ros2_control/src/reddog_ROS2Control/controllers/rl_quadruped_controller/launch/: bringup.launch.py
ros2_control/src/reddog_ROS2Control/controllers/rl_quadruped_controller/src/: rl_quadruped_controller.cpp
